fixed job details bug, added display toggle for landing page's sections

--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -23,3 +23,14 @@
 .Link:hover {
     background-color: RGB(255, 193, 7);
 }
+
+#Aboutus,
+#Howitworks,
+#Pricing 
+{
+    display: none;
+    text-align: left;
+    padding: 4vh;
+    height: 65vh;
+    align-items: center;
+}
