contact us page, landing page with job api datas, service file done

--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -30,7 +30,11 @@
     background-color: RGB(255, 193, 7);
 }
 
-#Aboutus,
+.ApiJob:hover{
+    background-color: RGB(255, 193, 7);
+}
+
+#Jobs,
 #Howitworks,
 #Pricing 
 {
